--- a/ReactiveStarscream.xcodeproj/xcshareddata/xcschemes/StarscreamOSX.xcscheme
+++ b/ReactiveStarscream.xcodeproj/xcshareddata/xcschemes/StarscreamOSX.xcscheme
@@ -14,10 +14,24 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "6B3E79E519D48B7F006071F7"
+               BlueprintIdentifier = "D9C3E35E19E48FF1009FC285"
                BuildableName = "Starscream.framework"
-               BlueprintName = "Starscream"
-               ReferencedContainer = "container:Starscream.xcodeproj">
+               BlueprintName = "ReactiveStarscreamOSX"
+               ReferencedContainer = "container:ReactiveStarscream.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "D9C3E36819E48FF1009FC285"
+               BuildableName = "ReactiveStarscreamOSXTests.xctest"
+               BlueprintName = "ReactiveStarscreamOSXTests"
+               ReferencedContainer = "container:ReactiveStarscream.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -28,7 +42,26 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       buildConfiguration = "Debug">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "D9C3E36819E48FF1009FC285"
+               BuildableName = "ReactiveStarscreamOSXTests.xctest"
+               BlueprintName = "ReactiveStarscreamOSXTests"
+               ReferencedContainer = "container:ReactiveStarscream.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "D9C3E35E19E48FF1009FC285"
+            BuildableName = "Starscream.framework"
+            BlueprintName = "ReactiveStarscreamOSX"
+            ReferencedContainer = "container:ReactiveStarscream.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </TestAction>
    <LaunchAction
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
@@ -42,10 +75,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "6B3E79E519D48B7F006071F7"
+            BlueprintIdentifier = "D9C3E35E19E48FF1009FC285"
             BuildableName = "Starscream.framework"
-            BlueprintName = "Starscream"
-            ReferencedContainer = "container:Starscream.xcodeproj">
+            BlueprintName = "ReactiveStarscreamOSX"
+            ReferencedContainer = "container:ReactiveStarscream.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -60,10 +93,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "6B3E79E519D48B7F006071F7"
+            BlueprintIdentifier = "D9C3E35E19E48FF1009FC285"
             BuildableName = "Starscream.framework"
-            BlueprintName = "Starscream"
-            ReferencedContainer = "container:Starscream.xcodeproj">
+            BlueprintName = "ReactiveStarscreamOSX"
+            ReferencedContainer = "container:ReactiveStarscream.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
