--- a/ReactiveStarscream.xcodeproj/xcshareddata/xcschemes/StarscreamTests.xcscheme
+++ b/ReactiveStarscream.xcodeproj/xcshareddata/xcschemes/StarscreamTests.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "6B3E79F019D48B7F006071F7"
-               BuildableName = "StarscreamTests.xctest"
-               BlueprintName = "StarscreamTests"
-               ReferencedContainer = "container:Starscream.xcodeproj">
+               BuildableName = "ReactiveStarscreamTests.xctest"
+               BlueprintName = "ReactiveStarscreamTests"
+               ReferencedContainer = "container:ReactiveStarscream.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "6B3E79F019D48B7F006071F7"
-               BuildableName = "StarscreamTests.xctest"
-               BlueprintName = "StarscreamTests"
-               ReferencedContainer = "container:Starscream.xcodeproj">
+               BuildableName = "ReactiveStarscreamTests.xctest"
+               BlueprintName = "ReactiveStarscreamTests"
+               ReferencedContainer = "container:ReactiveStarscream.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -43,9 +43,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6B3E79F019D48B7F006071F7"
-            BuildableName = "StarscreamTests.xctest"
-            BlueprintName = "StarscreamTests"
-            ReferencedContainer = "container:Starscream.xcodeproj">
+            BuildableName = "ReactiveStarscreamTests.xctest"
+            BlueprintName = "ReactiveStarscreamTests"
+            ReferencedContainer = "container:ReactiveStarscream.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -62,9 +62,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6B3E79F019D48B7F006071F7"
-            BuildableName = "StarscreamTests.xctest"
-            BlueprintName = "StarscreamTests"
-            ReferencedContainer = "container:Starscream.xcodeproj">
+            BuildableName = "ReactiveStarscreamTests.xctest"
+            BlueprintName = "ReactiveStarscreamTests"
+            ReferencedContainer = "container:ReactiveStarscream.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -80,9 +80,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6B3E79F019D48B7F006071F7"
-            BuildableName = "StarscreamTests.xctest"
-            BlueprintName = "StarscreamTests"
-            ReferencedContainer = "container:Starscream.xcodeproj">
+            BuildableName = "ReactiveStarscreamTests.xctest"
+            BlueprintName = "ReactiveStarscreamTests"
+            ReferencedContainer = "container:ReactiveStarscream.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
